fix horizontal scrollbar on partners page

--- a/resources/sass/_partners.scss
+++ b/resources/sass/_partners.scss
@@ -1,3 +1,7 @@
+.partners_page {
+    overflow: hidden;
+}
+
 .partners_hero {
     position: relative;
     padding-top: 4.5em;
